# bs2026_student_projects

Agshin_Osmanov/: .gitignore  main.py  readme.md
Alexey_Fedorov/: README.md  main.py  video.md
Anastasija_L-N/: Readme.md
Juta_Varnyte/: dashboard.py  project.py
Karolis_Zivulskas/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml
Karolis_Zivulskas/infra/grafana/dashboards/: repops_content.json  repops_overview.json
Karolis_Zivulskas/infra/grafana/provisioning/dashboards/: dashboards.yaml
Karolis_Zivulskas/infra/grafana/provisioning/datasources/: datasources.yaml
Karolis_Zivulskas/infra/prometheus/: prometheus.yml
Karolis_Zivulskas/infra/promtail/: config.yaml
Karolis_Zivulskas/infra/terraform/: backend.tfvars.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
Karolis_Zivulskas/migrations/: env.py
Karolis_Zivulskas/migrations/versions/: 2d9834b3b591_initial_schema.py  eddd6eeac233_drop_ml_columns_from_analysis_results.py
Karolis_Zivulskas/repops/: __init__.py  db.py  settings.py
Karolis_Zivulskas/repops/analyzer/: __init__.py  keyword_matcher.py  profile_scorer.py  tasks.py
Karolis_Zivulskas/repops/api/: __init__.py  dependencies.py  main.py
Karolis_Zivulskas/repops/api/routers/: keywords.py  reports.py  results.py  targets.py
Karolis_Zivulskas/repops/collector/: __init__.py  apify_scraper.py  rate_limiter.py  tasks.py  types.py
Karolis_Zivulskas/repops/observability/: __init__.py  logging.py  metrics.py
Karolis_Zivulskas/repops/reporter/: __init__.py  alert_router.py  evidence_bundler.py  meta_reporter.py  tasks.py
Karolis_Zivulskas/repops/workers/: __init__.py  app.py  schedules.py  tasks.py
Karolis_Zivulskas/scripts/: import_keywords.py
Karolis_Zivulskas/tests/: conftest.py
Karolis_Zivulskas/tests/integration/: test_api_keywords.py  test_api_targets.py
Karolis_Zivulskas/tests/unit/: test_keyword_matcher.py  test_language_detector.py  test_profile_scorer.py  test_rate_limiter.py
Mariam_Enukashvili/: README.md  app.py  main.py
Rasa_Kundrotaite/: .gitignore  README.md  REPORT.md  app.py  env.yml  models.py
(+44 files in other folders)
